added some changes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
       <div class="row align-items-center">
         <div class="col-12 col-md-6">
           <h1>About Me</h1><hr>
-          <h5>My name is Khwezilomso Mbobo,</h5>
+          <h5>My name is Khwezilomso Mbobo, I was born in Woodstock,
+          Cape Town where I was raised by two loving perants my mother a Financial admin at UCT and father a RAF moblie oficer.</h5>
         </div>
         <div class="col-12 col-md-6">
           <img src="/Assets/IMG_20231031_082958.jpg" id="Pic" alt="...">
@@ -93,7 +94,7 @@
                 <img src="/Assets/Life choices logo.png" class="card-img-top" alt="..." style="height: 165px;">
                 <h5 class="card-title">Life choices</h5>
                 <div class="card-body">
-                  <p class="card-text"></p>
+                  <p class="card-text">Currently studing at life choices</p>
                 </div>
               </div>
             </div>
@@ -184,7 +185,7 @@
         </div>
         <div class="row">
           <div class="col-3 offset-md-3">
-            <div class="container1">
+            <div class="container1" id="card">
               <div class="card" style="width: 18rem;">
                 <img src="/Assets/Calculator.png" class="card-img-top" alt="...">
                 <h5 class="card-title">Calculator</h5>
@@ -215,7 +216,7 @@
         
       
 
-    <div id="testimonial" class="container text-center">
+    <div id="testimonial" class="container text-center" >
       <div class="row">
         <div class="col-md-2">
           <h1>Testimonial</h1>
@@ -289,7 +290,7 @@
           <p>khwezimbobo@gmail.com</p>
         </div>
         </div>
-        <div class="col-md-6" style="text-align: center;">
+        <div class="col-md-6" style="text-align: center;" id="form">
           <div class="mb-3">
             <form action="https://formspree.io/f/xwkdydql"method="POST">
               <div class="mb-3">
